Further project re-structure, towards a blocks-oriented approach. Implemented a modular architecture for client-side scripts. - Ability to use CommonJS requires - Easy-to-navigate namespace - Index-Block require strategy (find block/name/index first, then block/name/name)

--- a/src/site/blocks/headers/documentation-header/_documentation-header.scss
+++ b/src/site/blocks/headers/documentation-header/_documentation-header.scss
@@ -1,5 +1,8 @@
 .documentation-header {
-  margin: $gutter-scale1 0 $gutter-scale;
+  margin: $gutter-scale-1 0 $gutter-scale;
+  @include respond-to('medium') {
+    margin: $gutter-scale1 0 $gutter-scale;
+  }
 }
 .documentation-header__menu-button {
   display: inline-block;
@@ -12,7 +15,7 @@
   display: none;
   .brand-simple {
     display: inline-block;
-    padding: $gutter-scale-2;
+    padding: $gutter-scale-2 0;
   }
   @include respond-to('medium') {
     display: block;
