--- a/src/site/blocks/headers/landing-header/_landing-header.scss
+++ b/src/site/blocks/headers/landing-header/_landing-header.scss
@@ -1,5 +1,8 @@
 .landing-header {
-  margin: $gutter-scale1 0 $gutter-scale;
+  margin: $gutter-scale 0 $gutter-scale;
+  @include respond-to('medium') {
+    margin: $gutter-scale1 0 $gutter-scale;
+  }
 }
 
 .landing-header__menu-button {
@@ -11,10 +14,6 @@
 
 .landing-header__content {
   margin: 0;
-  .brand-simple {
-    display: inline-block;
-    padding: $gutter-scale-2;
-  }
   @include respond-to('medium') {
     display: block;
   }
