--- a/src/site/blocks/nav/_nav.scss
+++ b/src/site/blocks/nav/_nav.scss
@@ -5,6 +5,7 @@
 
 // Menu element
 .nav__menu {
+  @extend .pussshy__left-menu;
 
   @include respond-to("medium") {
 
@@ -30,18 +31,40 @@
 // Menu Header element
 
 .nav__menu-header {
-  margin: $gutter-scale-2 0;
+
+  padding: $gutter-scale-2 $gutter-scale;
+  margin-top: $gutter-scale1;
+  font-size: 1.2em;
+  font-weight: normal;
+
+
   @include respond-to("medium") {
     display: inline-block;
     float: left;
 
     margin: 0;
+    padding: 0;
+    font-size: 1em;
+    font-weight: inherit;
+
+    .brand-simple {
+      display: inline-block;
+      padding: $gutter-scale-2 0;
+    }
   }
 }
 
 // Menu Items element
 
 .nav__menu-items {
+  @extend .pussshy__menu-items;
+
+  a,
+  a:visited,
+  a:hover,
+  a:active {
+    color: $secondary-color-tint-5;
+  }
 
   @include respond-to("medium") {
     display: inline-block;
@@ -56,6 +79,7 @@
         background: inherit;
         color: inherit;
       }
+
 
       a {
         margin: 0;
