--- a/src/site/layouts/page/page.html
+++ b/src/site/layouts/page/page.html
@@ -1,20 +1,21 @@
 ---
 layout: default
 ---
-<div class="page-layout">
+<div class="page-layout"
+     data-block-name="layouts/page"
+     data-block-type="runnable">
+
     <div class="header">
         {% include headers/landing-header/landing-header.html %}
 
     </div>
 
-    <div class="pussshy__canvas content">
-
+    <div class="content">
         {{ content }}
-
     </div>
 
 </div>
 
-<footer class="pussshy__canvas page-layout__sticky-footer">
+<footer class="page-layout__sticky-footer">
     {% include footers/simple-footer/simple-footer.html %}
 </footer>
