Fix pussshy for jquery fallback and iOS

--- a/src/components/pussshy/index.html
+++ b/src/components/pussshy/index.html
@@ -10,6 +10,10 @@
 <div class="pussshy__canvas container">
     <h1>Pussshy Demo</h1>
     <button class="pussshy__menu-button">Toggle menu</button>
+    <p>Ipsum lorem and all that</p>
+    <p>Ipsum lorem and all that</p>
+    <p>Ipsum lorem and all that</p>
+    <p>Ipsum lorem and all that</p>
 </div>
 <div class="pussshy__menu">
     <ul class="pussshy__menu-items">
@@ -22,7 +26,9 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/pussshy.js"></script>
 <script>
-    var p = new Pussshy({});
+    var p = new Pussshy({
+        direction: 'right'
+    });
     console.log(p);
 </script>
 </html>
