--- a/src/components/pussshy/stylesheets/_site-overlay.scss
+++ b/src/components/pussshy/stylesheets/_site-overlay.scss
@@ -11,17 +11,27 @@
 
 /* Site Overlay Active Appearance */
 
-.pussshy__site-overlay--active .pussshy__site-overlay{
-  display: block;
+.pussshy__site-overlay--active {
+
+  /* prevent scrolling of your site when menu is open */
+  height: 100%;
+  overflow: hidden;
+  width: 100%;
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 9998;
-  background-color: $pussshy-site-overlay-color;
-  animation: fade 500ms;
+
+  .pussshy__site-overlay {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 9998;
+    background-color: $pussshy-site-overlay-color;
+    animation: fade 500ms;
+  }
 }
+
 
 /* Site Overlay Animation */
 
